--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.6-SNAPSHOT</version>
+    <version>3.6</version>
   </parent>
 
   <artifactId>fcrepo-common</artifactId>
@@ -31,8 +30,8 @@
 
                 <echo message="compile classpath: ${compile_classpath}" />
                 <echo message="runtime classpath: ${runtime_classpath}" />
-                <echo message="test classpath:    ${test_classpath}" />
-                <echo message="plugin classpath:  ${plugin_classpath}" />
+                <echo message="test classpath: ${test_classpath}" />
+                <echo message="plugin classpath: ${plugin_classpath}" />
               </target>
             </configuration>
             <goals>
