[maven-release-plugin] prepare for next development iteration

--- a/fcrepo-security/fcrepo-security-http/pom.xml
+++ b/fcrepo-security/fcrepo-security-http/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>fcrepo-security</artifactId>
 		<groupId>org.fcrepo</groupId>
-		<version>3.6</version>
+		<version>3.6.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
