FCREPO-1126: geronimo-servlet_2.5_spec-1.1.2.jar should be excluded from Maven dependencies
Adds rule to enforcer plugin and adds exclusion to cxf-rt-transports-http-jetty.

https://jira.duraspace.org/browse/FCREPO-1126

--- a/pom.xml
+++ b/pom.xml
@@ -887,6 +887,7 @@
                     <exclude>org.slf4j:slf4j-log4j13</exclude>
                     <exclude>org.slf4j:slf4j-nop</exclude>
                     <exclude>org.slf4j:slf4j-simple</exclude>
+                    <exclude>org.apache.geronimo.specs:geronimo-servlet_2.5_spec</exclude>
                   </excludes>
                 </bannedDependencies>
               </rules>
