FCREPO-1129: Exclude leveldb dependencies from activemq-core
Adds exclusion for fusemq-leveldb.

https://jira.duraspace.org/browse/FCREPO-1129

--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -527,6 +527,12 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>fusemq-leveldb</artifactId>
+          <groupId>org.fusesource.fuse-extra</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     
     <dependency>
