FCREPO-1131: Exclude unneeded jetty libraries
Removes  cxf-rt-transports-http-jetty and adds exclusion for jetty-server

https://jira.duraspace.org/browse/FCREPO-1131

--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -548,6 +548,10 @@
           <artifactId>geronimo-jms_1.1_spec</artifactId>
           <groupId>org.apache.geronimo.specs</groupId>
         </exclusion>
+        <exclusion>
+          <artifactId>jetty-server</artifactId>
+          <groupId>org.eclipse.jetty</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <!-- xstream is an optional activemq dependency, required for Stomp -->
