--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -542,18 +542,17 @@
 
     <dependency>
       <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-bundle</artifactId>
-      <exclusions>
-        <exclusion>
-          <artifactId>geronimo-jms_1.1_spec</artifactId>
-          <groupId>org.apache.geronimo.specs</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>jetty-server</artifactId>
-          <groupId>org.eclipse.jetty</groupId>
-        </exclusion>
-      </exclusions>
+      <artifactId>cxf-rt-frontend-jaxws</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-transports-http</artifactId>
+    </dependency>
+
     <!-- xstream is an optional activemq dependency, required for Stomp -->
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
