FCREPO-1136: NPE when user does not have write-access to server/management/uploads
Adds unit test for FCREPO-1136. Notable side effects to support testing:
  Adds mockito test dependency. Server#getUploadDir no longer final, so that it can be mocked

https://jira.duraspace.org/browse/FCREPO-1136

--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -810,5 +810,10 @@
       <artifactId>owlapi</artifactId>
       <version>3.0.0-patched</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
