FCREPO-1100: Bad short URL in installer
Removes short urls from installer entirely, as we currently don't
have a way to automatically point to the latest version.

https://jira.duraspace.org/browse/FCREPO-1100

--- a/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
+++ b/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
@@ -269,8 +269,7 @@ fesl.authz.enabled.description = \
 Enable FeSL Authorization? This is an experimental replacement for Fedora's \n\
 legacy authorization module, and is still under development.                \n\
 Production repositories should NOT enable this, but we invite you to try it \n\
-out and give us feedback.                                                   \n\
-For more information, see: http://fedora-commons.org/confluence/x/h4Ov
+out and give us feedback.
 fesl.authz.enabled.defaultValue = false
 
 llstore.type.label = Low Level Storage
@@ -279,8 +278,7 @@ Which low-level (file) storage plugin do you want to use?                  \n\
 We recommend akubra-fs for new installs.  If you are upgrading Fedora from \n\
 version 3.3 or below, you should use legacy-fs for compatibility with your \n\
 existing storage.  Other plugins are also available, but they must be      \n\
-configured after installation.  For more information, please see           \n\
-https://wiki.duraspace.org/x/Voqv
+configured after installation.
 llstore.type.validValues = akubra-fs legacy-fs
 llstore.type.defaultValue = akubra-fs
 
