--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -192,7 +192,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.20</version>
+      <version>5.1.21</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -279,7 +279,7 @@
     <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
+      <version>9.1-902.jdbc4</version>
       <scope>runtime</scope>
     </dependency>
 
