--- a/fcrepo-server/src/main/resources/properties/resources/install.properties
+++ b/fcrepo-server/src/main/resources/properties/resources/install.properties
@@ -6,10 +6,10 @@
 install.tomcat                  = apache-tomcat-6.0.35.zip
 install.tomcat.basename         = apache-tomcat-6.0.35
 
-install.jdbc.mysql              = mysql-connector-java-5.1.20.jar
-install.jdbc.derby              = derby-10.8.2.2.jar
-install.jdbc.derbynetworkclient = derbyclient-10.8.2.2.jar
-install.jdbc.postgresql         = postgresql-9.1-901-1.jdbc4.jar
+install.jdbc.mysql              = mysql-connector-java-5.1.21.jar
+install.jdbc.derby              = derby-10.9.1.0.jar
+install.jdbc.derbynetworkclient = derbyclient-10.9.1.0.jar
+install.jdbc.postgresql         = postgresql-9.1-902.jdbc4.jar
 
 # used by the org.fcrepo.utilities.install.Installer to determine if these jars
 # should be removed from fedora.war
