--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -49,6 +50,11 @@
       <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>xmlunit</groupId>
@@ -105,9 +111,9 @@
     </dependency>
 
     <dependency>
-    	<groupId>com.yourmediashelf.fedora.client</groupId>
-    	<artifactId>fedora-client-core</artifactId>
-    	<version>0.4</version>
+      <groupId>com.yourmediashelf.fedora.client</groupId>
+      <artifactId>fedora-client-core</artifactId>
+      <version>0.4</version>
     </dependency>
   </dependencies>
 </project>
