--- a/pom.xml
+++ b/pom.xml
@@ -560,7 +560,7 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.10</version>
-        <!-- <scope>test</scope> -->
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
