--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <version>3.6.1-SNAPSHOT</version>
   <name>Fedora Repository Project</name>
   <url>http://fedora-commons.org/</url>
-  
+
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
@@ -138,6 +138,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>13.0</version>
+      </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
