--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <version>3.6.1-SNAPSHOT</version>
   <name>Fedora Repository Project</name>
   <url>http://fedora-commons.org/</url>
-  
+
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
@@ -879,6 +879,22 @@
           <version>2.8.1</version>
         </plugin>
         <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <!-- see http://jira.codehaus.org/browse/MRELEASE-424 -->
+            <mavenExecutorId>forked-path</mavenExecutorId>
+            <tagNameFormat>v@{project.version}</tagNameFormat>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.scm</groupId>
+              <artifactId>maven-scm-provider-gitexe</artifactId>
+              <version>1.7</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>2.2</version>
@@ -982,7 +998,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
-
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
