[maven-release-plugin] prepare release v3.6.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -11,7 +10,7 @@
   <groupId>org.fcrepo</groupId>
   <artifactId>fcrepo</artifactId>
   <packaging>pom</packaging>
-  <version>3.6.1-SNAPSHOT</version>
+  <version>3.6.1</version>
   <name>Fedora Repository Project</name>
   <url>http://fedora-commons.org/</url>
 
@@ -688,6 +687,7 @@
     <connection>scm:git:git://github.com/fcrepo/fcrepo.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo/fcrepo.git</developerConnection>
     <url>https://github.com/fcrepo/fcrepo</url>
+    <tag>v3.6.1</tag>
   </scm>
 
   <build>
