--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.6.1-SNAPSHOT</version>
+    <version>3.6.1</version>
   </parent>
 
   <artifactId>fcrepo-integrationtest</artifactId>
