--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.6.1</version>
+    <version>3.6.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-server</artifactId>
