Eddie wants to run tests

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -343,6 +343,7 @@
                 <include>**/TestPolicies.class</include>
                 <include>**/TestHierarchy.class</include>
                 <include>**/TestPolicyIndex.class</include>
+                <include>**/TestRightsMetadataPolicy.class</include>
 
               </includes>
 
