xacml1 ns constants and fallback for resource-id att value

--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -270,6 +270,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>sunxacml</artifactId>
+      <classifier>melcoe</classifier>
+    </dependency>
+
+    <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>9.1-902.jdbc4</version>
