FCREPO-1161: Fix for SimpleDateFormat allocation in DateUtility ===============================================================
 - switched to using the Joda Time implementation in DateUtility
 - DateTimeFormatter is thread-safe, so DateUtility can use static instances
 - Some differences in between diff chronologies have been accounted for
   in between Joda time and the Java API. (e.g. the long values for the 1/1/1 for
   java.util.Date and joda's DateTime is different. Therefore some test had to be changed
   please *check these*
 - I think i also fixed a bug in the test were XSD dates were used by tests for parsing
   Dates, but since these use 0000 as the year 1 BCE and joda time uses -0001 i had to change these.
   Please check that i did it correctly
 - fixed the values in DateUtility to use joda time's chronology

--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -211,6 +211,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+    	<groupId>joda-time</groupId>
+    	<artifactId>joda-time</artifactId>
+    	<version>1.5.2</version>
+    </dependency>
   </dependencies>
 
 </project>
