--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.6.2-SNAPSHOT</version>
+    <version>3.6.2</version>
   </parent>
 
   <artifactId>fcrepo-installer</artifactId>
