--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
     <timestamp>${maven.build.timestamp}</timestamp>
     <abdera.version>1.1.2</abdera.version>
     <activemq.version>5.6.0</activemq.version>
-    <akubra.version>0.4.0</akubra.version>
+    <akubra.version>0.4.1-SNAPSHOT</akubra.version>
     <axiom.version>1.2.10</axiom.version>
     <cxf.version>2.6.2</cxf.version>
     <derby.version>10.9.1.0</derby.version>
