--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -10,7 +10,7 @@
 
   <artifactId>fcrepo-integrationtest-core</artifactId>
   <packaging>jar</packaging>
-  <name>Fedora Integration Test - Basic Tests &amp; Resources</name>
+  <name>Fedora Integration Test - Basic Tests and Resources</name>
 
   <build>
     <resources>
