--- a/pom.xml
+++ b/pom.xml
@@ -895,6 +895,10 @@
           </dependencies>
         </plugin>
         <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.1</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>2.2</version>
@@ -1037,6 +1041,68 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <reportPlugins>
+            <plugin>
+              <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <artifactId>maven-jxr-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <artifactId>maven-surefire-report-plugin</artifactId>
+              <configuration>
+                <outputName>surefire-report</outputName>
+                <aggregate>true</aggregate>
+                <reportsDirectories>
+                  <reportsDirectory>${project.build.directory}/surefire-reports/</reportsDirectory>
+                  <reportsDirectory>${project.build.directory}/failsafe-reports/</reportsDirectory>
+                </reportsDirectories>
+              </configuration>
+            </plugin>
+            <!--
+            <plugin>
+              <artifactId>maven-changelog-plugin</artifactId>
+              <version>2.2</version>
+              <configuration>
+                <displayFileDetailUrl>http://github.com/mediashelf/${project_name}/blob/master/%FILE% </displayFileDetailUrl>
+              </configuration>
+            </plugin>
+            <plugin>
+              <artifactId>maven-project-info-reports-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>cobertura-maven-plugin</artifactId>
+              <version>2.5.1</version>
+              <configuration>
+                <aggregate>true</aggregate>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>versions-maven-plugin</artifactId>
+              <version>1.3.1</version>
+              <reportSets>
+                <reportSet>
+                  <reports>
+                    <report>dependency-updates-report</report>
+                    <report>plugin-updates-report</report>
+                    <report>property-updates-report</report>
+                  </reports>
+                </reportSet>
+              </reportSets>
+            </plugin>
+            -->
+          </reportPlugins>
+        </configuration>
       </plugin>
 
     </plugins>
