--- a/pom.xml
+++ b/pom.xml
@@ -47,62 +47,50 @@
       <name>Armintor, Benjamin</name>
       <email>armintor@gmail.com</email>
     </developer>
-
     <developer>
       <name>Bayliss, Steve</name>
       <email>stephen.bayliss@acuityunlimited.co.uk</email>
     </developer>
-
     <developer>
       <name>Birkland, Aaron</name>
       <email>birkland@cs.cornell.edu</email>
     </developer>
-
     <developer>
       <name>Blekinge, Asger Askov</name>
       <email>abr@statsbiblioteket.dk</email>
     </developer>
-
     <developer>
       <name>Branan, Bill</name>
       <email>bbranan@duraspace.org</email>
     </developer>
-
     <developer>
       <name>Davis, Daniel</name>
       <email>ddavis@duraspace.org</email>
     </developer>
-
     <developer>
       <name>Pedersen, Gert Schmeltz</name>
       <email>gsp@dtic.dtu.dk</email>
     </developer>
-
     <developer>
       <name>Prater, Scott</name>
       <email>sprater@gmail.com</email>
     </developer>
-
     <developer>
       <name>Shin, Edwin</name>
       <email>edwin.shin@yourmediashelf.com</email>
     </developer>
-
     <developer>
       <name>Sternad, Kai</name>
       <email>kai@sternad.de</email>
     </developer>
-
     <developer>
       <name>Wilper, Chris</name>
       <email>cwilper@duraspace.org</email>
     </developer>
-
     <developer>
       <name>Woods, Andrew</name>
       <email>awoods@duraspace.org</email>
     </developer>
-
   </developers>
 
   <modules>
@@ -116,7 +104,9 @@
   </modules>
 
   <properties>
+    <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <unitTests>**/*Test.class</unitTests>
     <integrationTests>**/*Integration*.class</integrationTests>
     <instrumentedTests>**/*Test*__*.class</instrumentedTests>
@@ -131,7 +121,7 @@
     <cxf.version>2.6.2</cxf.version>
     <derby.version>10.9.1.0</derby.version>
     <jersey.version>1.8</jersey.version>
-    <slf4j.version>1.6.6</slf4j.version>
+    <slf4j.version>1.7.2</slf4j.version>
     <spring.version>3.0.7.RELEASE</spring.version>
     <trippi.version>1.5.8</trippi.version>
   </properties>
@@ -339,7 +329,7 @@
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.6</version>
+        <version>1.7</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -361,7 +351,7 @@
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.9.7</version>
+        <version>1.9.12</version>
       </dependency>
       <dependency>
         <groupId>org.trippi</groupId>
@@ -432,7 +422,7 @@
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.9</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -505,7 +495,7 @@
       <dependency>
         <groupId>xmlunit</groupId>
         <artifactId>xmlunit</artifactId>
-        <version>1.3</version>
+        <version>1.4</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -565,7 +555,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>1.9.5-rc1</version>
+        <version>1.9.5</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -681,7 +671,6 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
-
   </repositories>
 
   <scm>
@@ -828,7 +817,7 @@
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>2.3.7</version>
+          <version>2.0.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
@@ -906,6 +895,18 @@
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.2</version>
+          <configuration>
+            <skipDeploy>true</skipDeploy>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <!-- allows markdown syntax for site generation. To use it place files 
+                below src/site/markdown/[filename].md -->
+              <groupId>org.apache.maven.doxia</groupId>
+              <artifactId>doxia-module-markdown</artifactId>
+              <version>1.3</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
@@ -931,22 +932,27 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-
-    <testResources>
-      <testResource>
-        <directory>src/test/resources</directory>
-        <filtering>true</filtering>
-      </testResource>
-    </testResources>
-
     <plugins>
+      <plugin>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.7</version>
+        <configuration>
+          <message>Creating site for ${project.artifactId}, ${project.version}</message>
+          <!-- this does the trick to place every module in the correct subfolder -->
+          <path>${project.distributionManagement.site.url}</path>
+          <merge>true</merge>
+        </configuration>
+        <executions>
+          <execution>
+            <id>github</id>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site-deploy</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
@@ -1041,10 +1047,20 @@
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
-        <configuration>
-        </configuration>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
   </build>
 
   <reporting>
@@ -1069,39 +1085,16 @@
           </reportsDirectories>
         </configuration>
       </plugin>
-      <!--
-      <plugin>
-        <artifactId>maven-changelog-plugin</artifactId>
-        <configuration>
-          <displayFileDetailUrl>http://github.com/fcrepo/${project_name}/blob/master/%FILE% </displayFileDetailUrl>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <configuration>
-          <aggregate>true</aggregate>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>versions-maven-plugin</artifactId>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>dependency-updates-report</report>
-              <report>plugin-updates-report</report>
-              <report>property-updates-report</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-      </plugin>
-      -->
     </plugins>
   </reporting>
+
+  <distributionManagement>
+    <site>
+      <id>gh-pages</id>
+      <name>Deployment through GitHub's site deployment plugin</name>
+      <url>site/${project.version}</url>
+    </site>
+  </distributionManagement>
 
   <profiles>
     <profile>
