--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
     <slf4j.version>1.7.2</slf4j.version>
     <spring.version>3.0.7.RELEASE</spring.version>
     <trippi.version>1.5.8</trippi.version>
+    <powermock.version>1.5.1</powermock.version>
   </properties>
 
   <dependencyManagement>
@@ -556,6 +557,26 @@
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>1.9.5</version>
+        <scope>test</scope>
+        <exclusions>
+          <!-- mockito-core depends on objenesis-1.0, but powermock-module-junit4 
+               already brings in objenesis-1.2 -->
+          <exclusion>
+            <groupId>org.objnesis</groupId>
+            <artifactId>objnesis</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.powermock</groupId>
+        <artifactId>powermock-module-junit4</artifactId>
+        <version>${powermock.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.powermock</groupId>
+        <artifactId>powermock-api-mockito</artifactId>
+        <version>${powermock.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
