FCREPO-1182: update commons-dbcp and commons-pool

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,18 @@
         <version>3.2.1</version>
       </dependency>
 
+      <dependency>
+        <groupId>commons-pool</groupId>
+        <artifactId>commons-pool</artifactId>
+        <version>1.5.4</version>
+      </dependency>
+
+      <dependency>
+        <groupId>commons-dbcp</groupId>
+        <artifactId>commons-dbcp</artifactId>
+        <version>1.4</version>
+      </dependency>
+
 	  <dependency>
 	    <groupId>org.apache.httpcomponents</groupId>
 	    <artifactId>httpcore</artifactId>
