FCREPO-1090 Pool DocumentBuilders where possible

--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -233,6 +233,10 @@
     	<artifactId>joda-time</artifactId>
     	<version>1.5.2</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-pool</groupId>
+    	<artifactId>commons-pool</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
