Make compatible with Java 6

--- a/pom.xml
+++ b/pom.xml
@@ -913,8 +913,6 @@
           <version>3.0</version>
           <configuration>
             <debug>true</debug>
-            <source>1.7</source>
-            <target>1.7</target>
           </configuration>
         </plugin>
         <plugin>
@@ -1084,6 +1082,10 @@
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
