--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -260,8 +260,8 @@
       <version>0.96</version>
     </dependency>
     <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>openrdf-sesame-onejar</artifactId>
+      <groupId>org.openrdf.sesame</groupId>
+      <artifactId>sesame-model</artifactId>
     </dependency>
 
     <dependency>
