--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
     <sesame.version>2.7.11</sesame.version>
     <slf4j.version>1.7.2</slf4j.version>
     <spring.version>3.0.7.RELEASE</spring.version>
-    <trippi.version>1.5.9</trippi.version>
+    <trippi.version>1.5.10-SNAPSHOT</trippi.version>
     <powermock.version>1.5.1</powermock.version>
     <httpcomponents.version>4.2.5</httpcomponents.version>
     <httpcore.version>4.2.4</httpcore.version>
